# dinosaurisland

./: .gitignore  CLAUDE.md  package-lock.json  package.json  passenger_wsgi.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy.yml
client/: .env.development  index.html  package-lock.json  package.json  vite.config.ts
client/src/: App.tsx  index.css  main.tsx
client/src/api/: client.ts  types.ts  websocket.ts
client/src/components/game/: CanvasRenderer.ts  EventLog.tsx  GameCanvas.tsx  GameView.tsx  ReplayControls.tsx  ReplayEventLog.tsx  SpeciesPanel.tsx  TurnIndicator.tsx
client/src/components/lobby/: LobbyView.tsx  LoginScreen.tsx
client/src/state/: gameStore.ts
client/src/utils/: colors.ts
examples/: analyze_game.py  example_bot.py  quickstart_bot.py  run_match.py
scripts/: deploy.sh
server/: __main__.py
server/api/: app.py  deps.py  game_manager.py  schemas.py  ws.py
server/api/routes/: auth.py  game.py  lobby.py
server/bots/: base.py  random_bot.py
server/cli/: display.py  runner.py
server/engine/: combat.py  constants.py  feeding.py  game.py  models.py  movement.py  scoring.py  validation.py  vision.py
server/engine/mapgen/: base.py  simple.py
server/sdk/: __init__.py  client.py
tests/api/: conftest.py  test_game_api.py  test_lobby.py
tests/engine/: conftest.py  test_combat.py  test_feeding.py  test_game.py  test_mapgen.py  test_models.py  test_movement.py  test_scoring.py  test_validation.py  test_vision.py
tests/integration/: test_full_game.py
